Set up Error Prone according to documentation
https://errorprone.info/docs/installation#jdk-16